--- a/scripts/bot/package.json
+++ b/scripts/bot/package.json
@@ -4,7 +4,7 @@
   "license": "MPL-2.0",
   "devDependencies": {
     "docopt": "^0.6.2",
-    "puppeteer": "1.3.0",
+    "puppeteer": "^1.9.0",
     "query-string": "^5.0.1"
   }
 }
